[gd_scene load_steps=6 format=2]

[ext_resource path="res://HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://menus/SectionFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://menus/buttonFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://HUD/CoinCounter.tscn" type="PackedScene" id=4]
[ext_resource path="res://HUD/HUDGemIndicator.tscn" type="PackedScene" id=5]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="msgLabel" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 2 )
text = "The Quick brown fox jumps over the lazy dog."
align = 1
valign = 1
autowrap = true

[node name="msgTimer" type="Timer" parent="."]
pause_mode = 1
wait_time = 2.0
one_shot = true

[node name="pauseScreen" type="MarginContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -383.5
margin_right = 381.5
custom_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="pauseScreen"]
margin_right = 765.0
margin_bottom = 1380.0
custom_constants/separation = 60
alignment = 1

[node name="pauseLabel" type="Label" parent="pauseScreen/VBoxContainer"]
margin_top = 292.0
margin_right = 765.0
margin_bottom = 431.0
custom_fonts/font = ExtResource( 2 )
text = "PAUSED"
align = 1
valign = 1
autowrap = true

[node name="continueButton" type="Button" parent="pauseScreen/VBoxContainer"]
pause_mode = 2
margin_top = 491.0
margin_right = 765.0
margin_bottom = 595.0
custom_fonts/font = ExtResource( 3 )
text = "Resume"

[node name="restartButton" type="Button" parent="pauseScreen/VBoxContainer"]
pause_mode = 2
margin_top = 655.0
margin_right = 765.0
margin_bottom = 759.0
custom_fonts/font = ExtResource( 3 )
text = "Restart Level"

[node name="optionsButton" type="Button" parent="pauseScreen/VBoxContainer"]
pause_mode = 2
margin_top = 819.0
margin_right = 765.0
margin_bottom = 923.0
custom_fonts/font = ExtResource( 3 )
text = "Options"

[node name="quitButton" type="Button" parent="pauseScreen/VBoxContainer"]
pause_mode = 2
margin_top = 983.0
margin_right = 765.0
margin_bottom = 1087.0
custom_fonts/font = ExtResource( 3 )
text = "Quit To Menu"

[node name="CoinCounter" parent="." instance=ExtResource( 4 )]

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/margin_top = 20
custom_constants/margin_left = 20

[node name="GemIndicator" parent="MarginContainer" instance=ExtResource( 5 )]
margin_left = 20.0
margin_top = 20.0
margin_right = 40.0
margin_bottom = 180.0

[connection signal="timeout" from="msgTimer" to="." method="_on_msgTimer_timeout"]
[connection signal="pressed" from="pauseScreen/VBoxContainer/continueButton" to="." method="_on_continueButton_pressed"]
[connection signal="pressed" from="pauseScreen/VBoxContainer/restartButton" to="." method="_on_restartButton_pressed"]
[connection signal="pressed" from="pauseScreen/VBoxContainer/optionsButton" to="." method="_on_optionsButton_pressed"]
[connection signal="pressed" from="pauseScreen/VBoxContainer/quitButton" to="." method="_on_quitButton_pressed"]
